# cap_rate_project

./: .coverage  ARCHITECTURE_SUMMARY.md  Makefile  README.md  TESTING_SUMMARY.md  coverage.xml  pyproject.toml  requirements.txt
dashboard/: historical_cap_rates.csv  index.aspx
dashboard/js/: app.js
dashboard/js/components/: ChartManager.js
dashboard/js/models/: DealModel.js
dashboard/js/services/: DataService.js  MarketValidationService.js
dashboard/tests/unit/: test_deal_model.test.js
docs/: CNAME  package.json
docs/css/: dashboard.css
docs/js/components/: DashboardController.js
docs/tests/unit/: test_data_service.test.js
scripts/: serve_dashboard.py  update_dashboard.py
src/cap_rate_analyzer/: __init__.py
src/cap_rate_analyzer/core/: __init__.py  parser.py  processor.py
src/cap_rate_analyzer/models/: __init__.py  schemas.py
src/cap_rate_analyzer/utils/: __init__.py  config.py  text_processing.py
tests/: __init__.py
tests/integration/: test_end_to_end.py  test_full_workflow.py
tests/unit/: __init__.py
tests/unit/cap_rate_analyzer/core/: test_parser.py  test_processor.py
tests/unit/cap_rate_analyzer/models/: test_schemas.py
tests/unit/cap_rate_analyzer/utils/: test_config.py  test_text_processing.py
tests/unit/dashboard/: test_dashboard_components.py
